Entendendo meta tag

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
+<html Lang="pt-br">
+
 <head>
+<!-- 
+	Meta tags são lidas somente pelo navegador
+
+	charset utf 8 - padronização de caracteres para não ter problemas com acentuação
+
+	viewport - tela irá se adaptar ao dispositivo da pessoa 
+-->
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Meu primeiro site!">
+	<meta name="keywords" content="programacao,html">
+	<meta name="author" content="Guilherme Prazeres">
 	<title>Aprendendo Html</title>
 </head>
-<body>
 
+<body>
+	<h1>Aprendendo HTML</h1>
+	<p>Meu primeiro paragrado</p>
 </body>
+
 </html>
