--- a/index.html
+++ b/index.html
@@ -20,8 +20,21 @@
 </head>
 
 <body>
+<!-- 
+	Nunca se usa mais de um h1 
+	Tags
+	<b>negrito</b>
+	<i>italico</i>
+	<u>sublinhado</u>
+	<small>pequenininho</small>
+	<del>texto riscado deletado</del>
+	<sup>Potencia</sup>
+	<sub></sub>
+	<hr> linha
+	<br> quebra de linha
+-->
 	<h1>Aprendendo HTML</h1>
-	<p>Meu primeiro paragrado</p>
+	<p> <strong>Meu primeiro paragrado</strong> </p>
 </body>
 
 </html>
