Tags de citação

--- a/index.html
+++ b/index.html
@@ -32,9 +32,23 @@
 	<sub></sub>
 	<hr> linha
 	<br> quebra de linha
+
+	Tags de Citação
+	<Abbr title= "significado da abreviação">Abreviação</abbr>
+	<address></address> (caixa de endereço)
+	<cite>título de uma obra</cite> 
+	<q>citação de fala</q> 
+	<blockquote>destaque de um trecho</blockquote> 
+
 -->
 	<h1>Aprendendo HTML</h1>
+	
 	<p> <strong>Meu primeiro paragrado</strong> </p>
+
+	<h2>Elementos de Citação</h2>
+	<p>No mundo do <abbr title="World Wide Web">WWW</abbr> eu vivo no meu mundo. E como diria Diastofoli em sua obra <cite>Os mentirosos</cite><q>A verdade perseguirá o mundo de todos os que respiram mentiras</q>. <blockquote>Essa é a mais pura verdade</blockquote>Querendo você ou não...</p>
+	<address>Caso queira entrar em contato... <br>Ligue 99999-9999</address>
+
 </body>
 
 </html>
