--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <!-- 
 	Nunca se usa mais de um h1 
 	Tags
+	<strong>Importante</strong>
 	<b>negrito</b>
 	<i>italico</i>
 	<u>sublinhado</u>
@@ -42,12 +43,20 @@
 
 -->
 	<h1>Aprendendo HTML</h1>
-	
-	<p> <strong>Meu primeiro paragrado</strong> </p>
+
+	<p>Meu primeiro paragrafo</p>
 
 	<h2>Elementos de Citação</h2>
-	<p>No mundo do <abbr title="World Wide Web">WWW</abbr> eu vivo no meu mundo. E como diria Diastofoli em sua obra <cite>Os mentirosos</cite><q>A verdade perseguirá o mundo de todos os que respiram mentiras</q>. <blockquote>Essa é a mais pura verdade</blockquote>Querendo você ou não...</p>
-	<address>Caso queira entrar em contato... <br>Ligue 99999-9999</address>
+	<p>No mundo do <abbr title="World Wide Web">WWW</abbr> eu vivo no meu mundo. E como diria Diastofoli em sua obra <cite>Os mentirosos </cite><q>A verdade perseguirá o mundo de todos os que respiram mentiras</q>. <blockquote>Essa é a mais pura verdade</blockquote>Querendo você ou não...</p>
+	
+	<address>Caso queira entrar em contato... <br>Ligue 99999-9999 <br>
+
+		<!-- Link Absoluto para pagina sem fechar a atual-->
+	Ou pelo site: <a href="http://fb.com" target="_blank">Azul de todos nós</a> <br>
+		<!-- Link Relativo -->
+	Caso queira conhecer mais <a href="interno/conheca.html">Clique aqui</a>
+	</address>
+
 
 </body>
 
