--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
 		<!-- Link Absoluto para pagina sem fechar a atual-->
 	Ou pelo site: <a href="http://fb.com" target="_blank">Azul de todos nós</a> <br>
 		<!-- Link Relativo -->
-	Caso queira conhecer mais <a href="interno/conheca.html">Clique aqui</a>
+	Caso queira conhecer mais <a href="interno/conheca.html"><img src="../../../Imagens/img_html/clique_aqui.png" width="70" height="" alt="Universe"></a>
 	</address>
+
+	<p>Imagens gratuitas do Pexels ou pixabay ou freepik ou flaticon, redimensionadas no easi resize ou criadas no photopea no formato png para ter fundo transparente... ou mesmo trabalhando uma imagen para ter links em partes dela com o image map generator (Que gera o codigo da imagem mapeada)<br></p>
+	<img src="../../../Imagens/img_html/universe.jpg" width="600" height="" alt="Universe">
 
 
 </body>
