Estudando tabela e lista / Atualizei as imagens

--- a/index.html
+++ b/index.html
@@ -53,14 +53,52 @@
 
 		<!-- Link Absoluto para pagina sem fechar a atual-->
 	Ou pelo site: <a href="http://fb.com" target="_blank">Azul de todos nós</a> <br>
-		<!-- Link Relativo -->
+
+		<!-- Link Relativo com Imagen -->
 	Caso queira conhecer mais <a href="interno/conheca.html"><img src="../../../Imagens/img_html/clique_aqui.png" width="70" height="" alt="Universe"></a>
 	</address>
 
 	<p>Imagens gratuitas do Pexels ou pixabay ou freepik ou flaticon, redimensionadas no easi resize ou criadas no photopea no formato png para ter fundo transparente... ou mesmo trabalhando uma imagen para ter links em partes dela com o image map generator (Que gera o codigo da imagem mapeada)<br></p>
-	<img src="../../../Imagens/img_html/universe.jpg" width="600" height="" alt="Universe">
 
 
+<h2>Tabela</h2>
+	<table width="50%" border="1">
+		<tr>
+			<th>Nome</th>
+			<th>Idade</th>
+			<th>Genero</th>
+			<th>Linguagem</th>
+		</tr>
+		<tr>
+			<td>Guilherme</td>
+			<td>28</td>
+			<td>Masculino</td>
+			<td>JavaScript</td>			
+		</tr>
+		<tr>
+			<td>João</td>
+			<td>18</td>
+			<td>Masculino</td>
+			<td>Html</td>	
+		</tr>
+	</table>
+
+<h2>Lista Não Ordenada</h2>	
+	<ul>
+		<li>Arroz</li>
+		<li>Feijao</li>
+		<li>Macarrão</li>
+	</ul>
+
+<h2>Lista Ordenada</h2>
+	<ol>
+		<li>Arroz</li>
+		<li>Feijao</li>
+		<li>Macarrão</li>
+		<li>Banana</li>
+		<li>Carne</li>
+		<li>Ovo</li>
+	</ol>
 </body>
 
 </html>
