--- a/interno/conheca.html
+++ b/interno/conheca.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Conheça-te a ti mesmo</h1>
-
-<a href="../index.html">Voltar</a>
+<img src="../../../../Imagens/img_html/meditacao.png">
+<a href="../index.html"><img src="../../../../Imagens/img_html/voltar.gif" width="100"></a>
 </body>
 </html>
