Brincando com Iframes

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 
 		<!-- Link Relativo com Imagen -->
 	Caso queira conhecer mais <a href="interno/conheca.html"><img src="../../../Imagens/img_html/clique_aqui.png" width="70" height="" alt="Universe"></a>
+	<br>
+		<!-- Link Relativo que abre Iframe -->
+	Caso queira conhecer em um Iframe
+	<a href="interno/conheca.html" target="meu_iframe">Liberar Iframe</a>
+
 	</address>
 
 	<p>Imagens gratuitas do Pexels ou pixabay ou freepik ou flaticon, redimensionadas no easi resize ou criadas no photopea no formato png para ter fundo transparente... ou mesmo trabalhando uma imagen para ter links em partes dela com o image map generator (Que gera o codigo da imagem mapeada)<br></p>
@@ -100,5 +105,9 @@
 		<li>Ovo</li>
 	</ol>
 </body>
+
+<iframe src="" name="meu_iframe" width="50%" height="400" title="Conheça"></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nPEpaft1y1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </html>
