--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <!-- 
-	Meta tags são lidas somente pelo navegador
+	META TAGS são lidas somente pelo navegador
 
 	charset utf 8 - padronização de caracteres para não ter problemas com acentuação
 
@@ -33,8 +33,10 @@
 	<sub></sub>
 	<hr> linha
 	<br> quebra de linha
+	&nbsp; - Para dar espaço
 
-	Tags de Citação
+
+	TAGS DE CITAÇÂO
 	<Abbr title= "significado da abreviação">Abreviação</abbr>
 	<address></address> (caixa de endereço)
 	<cite>título de uma obra</cite> 
@@ -51,6 +53,9 @@
 	
 	<address>Caso queira entrar em contato... <br>Ligue 99999-9999 <br>
 
+
+
+
 		<!-- Link Absoluto para pagina sem fechar a atual-->
 	Ou pelo site: <a href="http://fb.com" target="_blank">Azul de todos nós</a> <br>
 
@@ -65,6 +70,18 @@
 
 	<p>Imagens gratuitas do Pexels ou pixabay ou freepik ou flaticon, redimensionadas no easi resize ou criadas no photopea no formato png para ter fundo transparente... ou mesmo trabalhando uma imagen para ter links em partes dela com o image map generator (Que gera o codigo da imagem mapeada)<br></p>
 
+
+<h2>Audio</h2>
+<audio controls>
+	<source src="../../../Música/enemy.mp3" type="audio/mpeg">
+</audio>
+
+
+<h2>Video</h2>
+
+<video poster="../../../Imagens/img_html/universe.jpg" width="50%" controls>
+	<source src="../../../Vídeos/video.mp4" type="video/mp4">
+</video>
 
 <h2>Formulário</h2>
 
@@ -115,6 +132,11 @@
 	<button>Enviar por aqui também</button>
 </form>
 
+
+
+
+
+
 <h2>Tabela</h2>
 	<table width="50%" border="1">
 		<tr>
@@ -143,6 +165,8 @@
 		<li>Feijao</li>
 		<li>Macarrão</li>
 	</ul>
+
+
 
 <h2>Lista Ordenada</h2>
 	<ol>
