--- a/index.html
+++ b/index.html
@@ -71,10 +71,18 @@
 	<p>Imagens gratuitas do Pexels ou pixabay ou freepik ou flaticon, redimensionadas no easi resize ou criadas no photopea no formato png para ter fundo transparente... ou mesmo trabalhando uma imagen para ter links em partes dela com o image map generator (Que gera o codigo da imagem mapeada)<br></p>
 
 
+
+
+
+
+
 <h2>Audio</h2>
 <audio controls>
 	<source src="../../../Música/enemy.mp3" type="audio/mpeg">
 </audio>
+
+
+
 
 
 <h2>Video</h2>
@@ -82,6 +90,12 @@
 <video poster="../../../Imagens/img_html/universe.jpg" width="50%" controls>
 	<source src="../../../Vídeos/video.mp4" type="video/mp4">
 </video>
+
+
+
+
+
+
 
 <h2>Formulário</h2>
 
@@ -182,5 +196,21 @@
 <iframe src="" name="meu_iframe" width="50%" height="400" title="Conheça"></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nPEpaft1y1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
+
+
+<!-- Por ultimo e para começar a dar inicio ao CSS
+
+Div para compartimentos de expressão CSS
+Que serão mais bem interpretados pelo navegador como
+Header
+Nav
+Section e article
+Footer
+
+-->
+
 
 </html>
